--- a/Node - express/package.json
+++ b/Node - express/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ajv": "^8.11.2",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
