--- a/Node - movies API/package.json
+++ b/Node - movies API/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon --watch ./app.js app.js"
+    "start": "nodemon --watch ./ app.js"
   },
   "dependencies": {
     "ajv": "^8.11.2",
