--- a/Node - movies API/package.json
+++ b/Node - movies API/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "ajv": "^8.11.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   }
 }
