--- a/Node - movies API/package.json
+++ b/Node - movies API/package.json
@@ -4,8 +4,10 @@
   },
   "dependencies": {
     "ajv": "^8.11.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
