--- a/Node - movies API/package.json
+++ b/Node - movies API/package.json
@@ -4,9 +4,13 @@
   },
   "dependencies": {
     "ajv": "^8.11.2",
+    "axios": "^1.2.2",
+    "cloudinary": "^1.33.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1"
   }
