--- a/Mongodb - API/package.json
+++ b/Mongodb - API/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config=jest.config.js --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -12,8 +12,10 @@
     "ajv": "^8.12.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.0.0"
+    "mongodb": "^5.0.0",
+    "supertest": "^6.3.3"
   }
 }
